# embedded-temu

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: main.yml
examples/: basic.rs  fontdue.rs  ratatui.rs  replay.rs  rterm.rs  test-escapes.txt
src/: ansi.rs  cell.rs  cell_buffer.rs  color.rs  console.rs  lib.rs  ratatui_backend.rs  style.rs  text.rs  text_buffer.rs
