[package]
name = "embedded-temu"
version = "0.1.0"
authors = ["Alex Charlton <alex.n.charlton@gmail.com>"]
edition = "2024"
description = "Terminal emulator on embedded-graphics."
keywords = ["terminal", "no-std"]
categories = ["embedded", "gui", "no-std"]
repository = "https://github.com/AlexCharlton/embedded-temu"
license = "MIT"

[dependencies]
embedded-graphics = "0.8"
vte = "0.10"
log = { version = "0.4", default-features = false, optional = true }
bitflags = "1.3"
lazy_static = { version = "1.4", features = ["spin_no_std"] }

[dev-dependencies]
embedded-graphics-simulator = { version = "0.7", default-features = false }
env_logger = "0.9"

[features]
default = []
