[package]
name = "embedded-temu"
version = "0.1.0"
authors = ["Alex Charlton <alex.n.charlton@gmail.com>"]
edition = "2024"
description = "Terminal emulator on embedded-graphics."
keywords = ["terminal", "no-std"]
categories = ["embedded", "gui", "no-std"]
repository = "https://github.com/AlexCharlton/embedded-temu"
license = "MIT"

[dependencies]
bitflags = "1.3"
embedded-graphics = "0.8"
fontdue = "0.9"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
log = { version = "0.4", default-features = false, optional = true }
ratatui = { git = "https://github.com/j-g00da/ratatui.git", branch = "no_std/minimal", default-features = false, optional = true }
vte = "0.10"

[dev-dependencies]
embedded-graphics-simulator = { version = "0.7", default-features = false }
env_logger = "0.9"

[features]
default = []

ratatui-backend = ["ratatui"]

[[example]]
name = "ratatui"
required-features = ["ratatui-backend"]
